# ChannelsDjangoTS

channels/: pyproject.toml
channels/channel/: admin.py  models.py
channels/channel/migrations/: 0001_initial.py
channels/channels/: asgi.py  settings.py  urls.py  wsgi.py
