[tool.poetry]
name = "channels"
version = "0.1.0"
description = ""
authors = ["jcosta86 <jeferson.costa@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.3.1"
Django = "3.1.6"
pytz = "2021.1"
sqlparse = "0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
